move font attributes of \traeger outside of the command

--- a/urkunde_lehrpreis.tex
+++ b/urkunde_lehrpreis.tex
@@ -38,7 +38,7 @@
 \newcommand{\headercolor}{gray}
 
 %% An wen soll die Urkunde ausgestellt werden?
-\newcommand{\traeger}{\Huge\textbf{Prof. Dr. Foo Bar}}
+\newcommand{\traeger}{Prof. Dr. Foo Bar}
 
 %% Wer ueberreicht die Urkunde?
 \newcommand{\ueberreicht}{Erika Mustermann}
@@ -78,7 +78,7 @@
 	\begin{center}
 	\huge Für herausragendes Engagement\\ in der Lehre am Wilhelm-Schickard-Institut wird \\
 	\vspace*{1cm}
-	\traeger \\
+	\Huge\textbf{\traeger} \\
 	\vspace*{1cm}
 	\huge der Lehrpreis der Fachschaft Informatik verliehen.
 	\vfill
